# Strata

./: .dockerignore  .gitattributes  .gitignore  00_hello_world.asm  01_basic_types.asm  10_functions.asm  AGENTS.md  ARCHITECTURE.md  COMPLETE_REGISTRY.md  CONTRIBUTING.md  Dockerfile  EXTENDED_FEATURES.md  FEATURES_SUMMARY.txt  FINAL_ANSWER.txt  IMPLEMENTATION_COMPLETE.txt  Makefile  QUICK_REFERENCE.md  README.md  REGISTRY_IMPLEMENTATION.md  REGISTRY_INDEX.md  REGISTRY_SUMMARY.md  REWRITE_COMPLETE.md  SDK.md  SITE_STRUCTURE.md  STRATAUM_CHECKLIST.md  STRATAUM_REWRITE_SUMMARY.md  STRATAUM_SUMMARY.md  STRATAUM_USAGE.md  Strataumfile  VALIDATION_REPORT.md  benchmark_runner.js  benchmark_runner.mjs  build.bat  build.sh  docker-compose.yml  docker.mk  docs.html  index.html  index.ts  main.cpp  (+7 more)
compiler/: CMakeLists.txt
compiler/include/: ast.hpp  codegen.hpp  compiler.hpp  lexer.hpp  parser.hpp  token.hpp  type_checker.hpp
compiler/src/: ast.cpp  codegen.cpp  compiler.cpp  lexer.cpp  main.cpp  parser.cpp  type_checker.cpp
js/: nav.js  (+3 more)
sdk/: .dockerignore  .gitignore  .npmignore  ARCHITECTURE.md  CMakeLists.txt  COMPLETE.md  DELIVERY_CHECKLIST.md  Dockerfile  FINAL_SUMMARY.txt  INDEX.md  INSTALLATION.md  QUICK_START.md  README.md  SDK_SUMMARY.md  START_HERE.md  USAGE.md  package-lock.json  package.json  production.config.js  test-electron.js  tsconfig.json
sdk/examples/hello-world/: strata.toml
sdk/examples/web-server/: strata.toml
sdk/gui-dist/: index.html
sdk/native/: compiler.cc
sdk/src/: cli.ts  gui.ts  index.ts
sdk/src/core/: compiler.ts  index.ts  runtime.ts
sdk/src/gui/: main.ts  preload.ts  renderer.ts
sdk/src/project/: index.ts  manager.ts
sdk/src/runner/: index.ts
(+213 files in other folders)
